@@ -2735,6 +2735,17 @@ public class CoffeeUtensils extends StdLibrary implements CMMiscUtils
 							buf.append(A.getTimeObj().timeDescription(mob, R));
 							c+=2;
 							break;
+						case 'r':
+						{
+							final String domType;
+							if((R.domainType()&Room.INDOORS)==0)
+								domType=Room.DOMAIN_OUTDOOR_DESCS[R.domainType()].toLowerCase();
+							else
+								domType=Room.DOMAIN_INDOORS_DESCS[CMath.unsetb(R.domainType(),Room.INDOORS)].toLowerCase();
+							buf.append(domType);
+							c+=2;
+							break;
+						}
 						default:
 							c+=1;
 							break;
