@@ -2172,7 +2172,7 @@ Valid embedded codes for custom prompts include:\n\r\
 %Kh: Tanks current hits*  %Km: Tanks current mana*  %Kv: Tanks curr. moves*\n\r\
 %KH: Tanks maximum hits   %KM: Tanks maximum mana   %KV: Tanks maxi. moves \n\r\
 %Ke: Tanks name           %KE: Tanks health         %j : Group size/%J: max\n\r\
-%Zw: %ZW: Weather infos   %Zt: %ZT: Date/Time Infos\n\r\
+%Zw: %ZW: Weather infos   %Zt: %ZT: Date/Time Infos %Zr: Room domain type  \n\r\
 * Supports adding another % after the letter to show percentage.\n\r\
 ^HMISC:^N\n\r\
 %/ :  Begin/End combat-only section -- %\\ :  Begin/End non-combat sect.\n\r\
